# selfhosted-scripts

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_TODO.md  README.md  run-todo.sh
client/digitalocean/: dosb-spec.md
client/digitalocean/dosb/: Cargo.toml
client/digitalocean/dosb/src/: ui.rs
client/digitalocean/dosb/src/api/: mod.rs  models.rs
client/digitalocean/dosb/src/commands/: common.rs  connect_droplet.rs  create_droplet.rs  destroy_droplet.rs  init.rs  list_snapshots.rs  mod.rs
digitalocean/dosb/: README.md
digitalocean/dosb/src/: cli.rs  config.rs  main.rs
digitalocean/dosb/src/commands/: list_droplets.rs  take_snapshot.rs
lib/: common.sh
server/: bootstrap_server.sh  setup_rootless_podman.sh
vaultwarden/: setup_vaultwarden.sh
